big fix: module structure

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -193,8 +193,14 @@
         ></div>
       </section>
 
-      <!-- 🔥 reservation 🔥 -->
-      <section id="reservation-section" data-icons="fa-calendar-check" data-color="teal-stone-orange" class="section">
+      <!-- 🔥 inquiry-reservation 🔥 -->
+      <section
+        id="inquiry-reservation-section"
+        data-icons="fa-users::fa-calendar-check"
+        data-sectiontexts="Inquiry::Reservation"
+        data-color="teal-stone-orange"
+        class="section"
+      >
         <div
           id="section-header"
           data-title="Reservation"
@@ -326,35 +332,11 @@
         ></div>
       </section>
 
-      <!-- 🔥 reports 🔥 -->
-      <section id="reports-section" data-icons="fa-file" data-color="violet-fuchsia-red" class="section">
-        <div
-          id="section-header"
-          data-title="Reports"
-          data-subtitle="Data Overview"
-          data-mainbtntext="Export to PDF [-📄-]"
-        ></div>
-        <div id="section-stats"></div>
-        <div
-          id="section-content"
-          data-sectioncount="1"
-          data-tabtitles="Monthly Pass Users::Regular / Daily Users::Students::Supplements::Reservations"
-          data-subtitles="Monthly Pass Users::Regular / Daily Users::Students::Supplements::Reservations"
-          data-sectiononesearchtext="Search keyword..."
-          data-sectiononesettings="1"
-          data-listemptytexts="No monthly members found::No regular users found::No student users found::No supplement sales found::No reservations found"
-          data-listtitletexts="[Member ID//Member Name//Type//Status//Start Date//End Date//Amount//Renewal Amount]::[ID//Type//Client Name//Time In//Amount]::[ID//Type//Client Name//Time In//Amount]::[Product ID//Product Name//Quantity//Price//Quantity Sold//Total Sales//Date]::[Reservation ID//Service Type//Customer Name//Start Time//End Time//Reservation Date//Additional Members//Price]"
-          data-listitembtnids="[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]"
-          data-listitembtntexts="[Details [-📙-]]::[Details [-📙-]]::[Details [-📙-]]::[Details [-📙-]]::[Details [-📙-]]"
-          data-listitembtncolors="[orange]::[orange]::[orange]::[orange]::[orange]"
-        ></div>
-      </section>
-
-      <!-- 🔥 accesscontrol 🔥 -->
+      <!-- 🔥 maintenance-accesscontrol 🔥 -->
       <section
-        id="accesscontrol-section"
-        data-icons="fa-address-book"
-        data-sectiontexts="Access Control"
+        id="maintenance-accesscontrol-section"
+        data-icons="fa-cogs::fa-server"
+        data-sectiontexts="Maintenance::Access Control"
         data-color="violet-fuchsia-red"
         class="section"
       >
@@ -380,11 +362,41 @@
         ></div>
       </section>
 
-      <!-- 🔥 datasync 🔥 -->
+      <!-- 🔥 maintenance-datacontrol 🔥 -->
       <section
-        id="datasync-section"
-        data-icons="fa-rotate"
-        data-sectiontexts="Data Sync"
+        id="maintenance-datacontrol-section"
+        data-icons="fa-cogs::fa-file-circle-question"
+        data-sectiontexts="Maintenance::Data Control"
+        data-color="violet-fuchsia-red"
+        class="section"
+      >
+        <div
+          id="section-header"
+          data-title="Data Control"
+          data-subtitle="System Data Management"
+          data-mainbtntext="Export to PDF [-📄-]"
+        ></div>
+        <div id="section-stats"></div>
+        <div
+          id="section-content"
+          data-sectioncount="1"
+          data-tabtitles="Monthly Pass Users::Regular / Daily Users::Students::Supplements::Reservations"
+          data-subtitles="Monthly Pass Users::Regular / Daily Users::Students::Supplements::Reservations"
+          data-sectiononesearchtext="Search keyword..."
+          data-sectiononesettings="1"
+          data-listemptytexts="No monthly members found::No regular users found::No student users found::No supplement sales found::No reservations found"
+          data-listtitletexts="[Member ID//Member Name//Type//Status//Start Date//End Date//Amount//Renewal Amount]::[ID//Type//Client Name//Time In//Amount]::[ID//Type//Client Name//Time In//Amount]::[Product ID//Product Name//Quantity//Price//Quantity Sold//Total Sales//Date]::[Reservation ID//Service Type//Customer Name//Start Time//End Time//Reservation Date//Additional Members//Price]"
+          data-listitembtnids="[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]"
+          data-listitembtntexts="[Details [-📙-]]::[Details [-📙-]]::[Details [-📙-]]::[Details [-📙-]]::[Details [-📙-]]"
+          data-listitembtncolors="[orange]::[orange]::[orange]::[orange]::[orange]"
+        ></div>
+      </section>
+
+      <!-- 🔥 maintenance-datasync 🔥 -->
+      <section
+        id="maintenance-datasync-section"
+        data-icons="fa-cogs::fa-rotate"
+        data-sectiontexts="Maintenance::Data Sync"
         data-color="pink-rose-indigo"
         class="section"
       >
@@ -430,8 +442,14 @@
         ></div>
       </section>
 
-      <!-- 🔥 maintenance 🔥 -->
-      <section id="maintenance-section" data-icons="fa-dumbbell" data-color="cyan-blue-sky" class="section">
+      <!-- 🔥 maintenance-equipment 🔥 -->
+      <section
+        id="maintenance-equipment-section"
+        data-icons="fa-cogs::fa-dumbbell"
+        data-sectiontexts="Maintenance::Equipment"
+        data-color="cyan-blue-sky"
+        class="section"
+      >
         <div
           id="section-header"
           data-title="Equipment Maintenance"
