--- a/src/html/custom/inquiry_reservation_content.html
+++ b/src/html/custom/inquiry_reservation_content.html
@@ -1,26 +1,37 @@
 <!-- do not remove class="h-[530px]" and class="h-[500px] pt-4" -jest -->
 <div data-sectionindex="1" data-tabindex="1" class="h-[530px]">
   <div id="calendar" class="flex h-full flex-col rounded-lg bg-white shadow-lg">
-    <div class="flex items-center justify-between border-b p-4">
+    <div class="flex items-center justify-between border-b p-1">
       <button id="prevMonth" class="rounded-lg p-2 transition-colors hover:bg-gray-100">
-        <i class="fas fa-chevron-left text-lg w-10"></i>
+        <i class="fas fa-chevron-left w-10 text-lg"></i>
       </button>
 
-      <h2 id="monthYear" class="text-xl font-semibold text-gray-800"></h2>
+      <div class="flex items-center justify-center gap-4">
+        <div id="month" class="text-lg font-semibold"></div>
+        <div class="flex items-center">
+          <button id="prevYear" class="rounded-r px-2 py-1 text-gray-600 hover:bg-gray-100">
+            <i class="fas fa-chevron-left text-lg"></i>
+          </button>
+          <span id="year" class="bg-gray-100 px-2 py-1 text-lg font-semibold"></span>
+          <button id="nextYear" class="rounded-l px-2 py-1 text-gray-600 hover:bg-gray-100">
+            <i class="fas fa-chevron-right text-lg"></i>
+          </button>
+        </div>
+      </div>
 
       <button id="nextMonth" class="rounded-lg p-2 transition-colors hover:bg-gray-100">
-        <i class="fas fa-chevron-right text-lg w-10"></i>
+        <i class="fas fa-chevron-right w-10 text-lg"></i>
       </button>
     </div>
 
-    <div class="grid grid-cols-7 border-b bg-gray-50">
-      <div class="p-3 text-center text-sm font-medium text-gray-600">Sun</div>
-      <div class="p-3 text-center text-sm font-medium text-gray-600">Mon</div>
-      <div class="p-3 text-center text-sm font-medium text-gray-600">Tue</div>
-      <div class="p-3 text-center text-sm font-medium text-gray-600">Wed</div>
-      <div class="p-3 text-center text-sm font-medium text-gray-600">Thu</div>
-      <div class="p-3 text-center text-sm font-medium text-gray-600">Fri</div>
-      <div class="p-3 text-center text-sm font-medium text-gray-600">Sat</div>
+    <div class="grid grid-cols-7 border-b bg-gray-50 p-2 text-center text-sm font-medium text-gray-600">
+      <p>Sun</p>
+      <p>Mon</p>
+      <p>Tue</p>
+      <p>Wed</p>
+      <p>Thu</p>
+      <p>Fri</p>
+      <p>Sat</p>
     </div>
 
     <div id="calendarGrid" class="grid flex-1 grid-cols-7"></div>
