feat: rename payment, sidebar & header name

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -296,10 +296,10 @@
       </section>
 
       <!-- 🔥 invoicing 🔥 -->
-      <section id="invoicing-section" data-icons="fa-coins" data-color="green-cyan-yellow" class="section">
+      <section id="invoicing-section" data-sectiontexts="Payment" data-icons="fa-coins" data-color="green-cyan-yellow" class="section">
         <div
           id="section-header"
-          data-title="Invoicing"
+          data-title="Payment"
           data-subtitle="Transaction Processing"
           data-mainbtntext="Manual Transaction [-💳-]"
           data-subbtntext="Logs [-📜-]"
