--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -198,13 +198,14 @@
         id="inquiry-reservation-section"
         data-icons="fa-users::fa-calendar-check"
         data-sectiontexts="Inquiry::Reservation"
-        data-color="teal-stone-orange"
+        data-color="blue-indigo-orange"
         class="section"
       >
         <div
           id="section-header"
           data-title="Reservation"
-          data-subtitle="Live Calendar Module"
+          data-subtitle="Realtime Calendar"
+          data-middletext="<div class='skew-x-12 text-white'></div>"
           data-mainbtntext="Manual Reserve Facility [-🛕-]"
         ></div>
         <div
@@ -221,11 +222,11 @@
           data-subtitles="Auto updating tab::Upcoming reservations::Old reservations"
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="::No schedules yet::No past schedules yet"
-          data-listtitletexts="[]::[Reservation ID//User//Facility//Schedule//Date & Time Registered]::[Reservation ID//User//Facility//Schedule//Date & Time Registered]"
+          data-listtitletexts="[]::[Reservation ID//User//Reservation Type//Schedule//Date & Time Registered]::[Reservation ID//User//Reservation Type//Schedule//Date & Time Registered]"
           data-listitembtnids="[]::[reservationViewDetailsBtn//reservationVoidBtn]::[reservationViewDetailsBtn//reservationVoidBtn]"
           data-listitembtntexts="[]::[View Details [-⚙️-]//Void [-📕-]]::[View Details [-⚙️-]//Void [-📕-]]"
-          data-listitembtncolors="[]::[yellow//red]::[yellow//red]"
-          data-sectiontwotitletexts="Quick Reservation::👈 Click a date in the live calendar tab"
+          data-listitembtncolors="[]::[orange//red]::[orange//red]"
+          data-sectiontwotitletexts="Quick Reservation::Click a date in the live calendar tab"
           data-sectiontwobtntext="Process Reservation Date"
         ></div>
       </section>
@@ -301,7 +302,7 @@
           id="section-header"
           data-title="Invoicing"
           data-subtitle="Transaction Processing"
-          data-mainbtntext="Manual Transaction [-💳-]"
+          data-mainbtntext="Consolidate Transactions [-💳-]"
           data-subbtntext="Logs [-📜-]"
         ></div>
         <div
