--- a/src/html/custom/inquiry_reservation_content.html
+++ b/src/html/custom/inquiry_reservation_content.html
@@ -37,3 +37,11 @@
     <div id="calendarGrid" class="grid flex-1 grid-cols-7"></div>
   </div>
 </div>
+<div data-sectionindex="2" class="h-[500px] pt-4">
+  <div id="inquiryReservationQuick" class="flex h-full justify-center">
+    <div class="self-center text-center text-xs font-bold text-gray-400">
+      <p class="text-sm">No selected date yet</p>
+      <p class="hidden"></p>
+    </div>
+  </div>
+</div>
