fix: payment module name

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -296,11 +296,11 @@
         ></div>
       </section>
 
-      <!-- 🔥 invoicing 🔥 -->
-      <section id="invoicing-section" data-icons="fa-coins" data-color="green-cyan-yellow" class="section">
+      <!-- 🔥 payment 🔥 -->
+      <section id="payment-section" data-icons="fa-coins" data-color="green-cyan-yellow" class="section">
         <div
           id="section-header"
-          data-title="Invoicing"
+          data-title="Payment"
           data-subtitle="Transaction Processing"
           data-mainbtntext="Consolidate Transactions [-💳-]"
           data-subbtntext="Logs [-📜-]"
