--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -150,62 +150,87 @@
         ></div>
       </section>
 
-      <!-- 🔥 inquiry-regular 🔥 -->
+      <!-- 🔥 inquiry-customers 🔥 -->
       <section
-        id="inquiry-regular-section"
-        data-icons="fa-users::fa-ticket-simple"
-        data-sectiontexts="Inquiry::Regular Check-In"
+        id="inquiry-customers-section"
+        data-icons="fa-users::fa-user-gear"
+        data-sectiontexts="Inquiry::Customers"
         data-color="blue-indigo-orange"
         class="section"
       >
         <div
           id="section-header"
-          data-title="Regular Check-In"
-          data-subtitle="Track Regular User Attendance"
-          data-middletext="<div class='skew-x-12 text-white'></div>"
-          data-mainbtntext="Register New User [-💪-]"
+          data-title="Customers"
+          data-subtitle="Customer Account Manager"
+          data-middletext="<div id='liveDate'></div>"
+          data-mainbtntext="Register New Customer [-💪-]"
           data-subbtntext="Logs [-📜-]"
         ></div>
         <div
           id="section-stats"
           data-toggles="0::0::0::0"
-          data-startingtexts="::Avg::Avg::Avg"
-          data-highlighttexts="Today's::Daily::Weekly::Monthly"
-          data-endingtexts="Check-Ins::Check-Ins::Check-Ins::Check-Ins"
+          data-startingtexts="Total::Total::Active::Active"
+          data-highlighttexts="Regular::Student::Monthly Pass::Reservations"
+          data-endingtexts="Customers::Customers::Customers::"
         ></div>
         <div
           id="section-content"
-          data-sectioncount="2"
-          data-tabtitles="Registered Daily Users::Daily Check-Ins Logbook"
-          data-subtitles="Manage daily users::All daily user check-ins"
+          data-sectioncount="1"
+          data-tabtitles="All Registered Customers::Pending Monthly Pass Customers::Active Monthly Pass Customers::Past Monthly Pass Customers"
+          data-subtitles="Manage all customers::Process monthly pass customers::Manage all monthly pass customers::View all past monthly pass customers"
           data-sectiononesearchtext="Search keyword..."
-          data-sectiononesettings="1"
-          data-listemptytexts="No registered users yet::No check-ins yet"
-          data-listtitletexts="[User ID//User//Date Registered]::[User ID//User//Date & Time]"
-          data-listitembtnids="[userEditDetailsBtn]::[userViewDetailsBtn//userVoidBtn]"
-          data-listitembtntexts="[Edit Details [-⚙️-]]::[View Details [-⚙️-]//Void [-📕-]]"
-          data-listitembtncolors="[orange]::[gray//red]"
-          data-sectiontwotitletexts="Quick Check-In::Upload user QR code or enter ID manually"
-          data-sectiontwosettings="1"
-          data-sectiontwoemptylist='<p class="text-sm">Status - No connection</p><p>No uploaded QR yet</p>'
-          data-sectiontwosearchtext="Enter user ID..."
-          data-sectiontwobtntext="Submit Check-In"
+          data-listemptytexts="No registered customers yet::No pending monthly pass customers yet::No active monthly pass customers yet::No past monthly pass customers yet"
+          data-listtitletexts="[Customer ID//Customer//Check-in Pass Type//Price Rate//Date Registered]::[Customer ID//Customer//Amount to Pay//Price Rate//Start Date//End Date//Log Date & Time]::[Customer ID//Customer//Amount Paid//Price Rate//Start Date//End Date]::[Customer ID//Customer//Amount Paid//Price Rate//Start Date//End Date]"
+          data-listitembtnids="[customerProcessBtn//customerEditDetailsBtn]::[customerProcessBtn//customerEditDetailsBtn]::[customerProcessBtn//customerEditDetailsBtn]::[customerProcessBtn//customerEditDetailsBtn]"
+          data-listitembtntexts="[Process [-📒-]//Edit Details [-⚙️-]]::[Process [-📒-]//Edit Details [-⚙️-]]::[Renew [-🎫-]]::[Details [-⚙️-]]"
+          data-listitembtncolors="[yellow//orange]::[yellow//orange]::[yellow//orange]::[yellow//orange]"
         ></div>
       </section>
 
-      <!-- 🔥 inquiry-reservation 🔥 -->
+      <!-- 🔥 inquiry-checkins 🔥 -->
       <section
-        id="inquiry-reservation-section"
-        data-icons="fa-users::fa-calendar-check"
-        data-sectiontexts="Inquiry::Reservation"
+        id="inquiry-checkins-section"
+        data-icons="fa-users::fa-ticket-simple"
+        data-sectiontexts="Inquiry::Check-Ins"
         data-color="blue-indigo-orange"
         class="section"
       >
         <div
           id="section-header"
-          data-title="Reservation"
+          data-title="Check-Ins"
+          data-subtitle="Customer Attendance Tracker"
+          data-middletext="<div id='liveDate'></div>"
+          data-subbtntext="Logs [-📜-]"
+        ></div>
+        <div id="section-stats"></div>
+        <div
+          id="section-content"
+          data-sectioncount="1"
+          data-tabtitles="Regular Check-Ins Logbook::Monthly Pass Check-Ins Logbook"
+          data-subtitles="All regular customer check-ins::All monthly pass customer check-ins"
+          data-sectiononesearchtext="Search keyword..."
+          data-sectiononesettings="1"
+          data-listemptytexts="No regular customer check-ins yet::No monthly pass customer check-ins yet"
+          data-listtitletexts="[Customer ID//Customer//Log Date & Time]::[Customer ID//Customer//Log Date & Time]"
+          data-listitembtnids="[customerInitiateProcessBtn//customerEditDetailsBtn//customerVoidBtn]::[customerInitiateProcessBtn//customerEditDetailsBtn//customerVoidBtn]"
+          data-listitembtntexts="[Initiate Process [-📒-]//Edit Details [-⚙️-]//Void [-📕-]]::[Initiate Process [-📒-]//Edit Details [-⚙️-]//Void [-📕-]]"
+          data-listitembtncolors="[yellow//orange//red]::[yellow//orange//red]"
+        ></div>
+      </section>
+
+      <!-- 🔥 inquiry-reservations 🔥 -->
+      <section
+        id="inquiry-reservations-section"
+        data-icons="fa-users::fa-calendar-check"
+        data-sectiontexts="Inquiry::Reservations"
+        data-color="blue-indigo-orange"
+        class="section"
+      >
+        <div
+          id="section-header"
+          data-title="Reservations"
           data-subtitle="Realtime Calendar"
-          data-middletext="<div class='skew-x-12 text-white'></div>"
+          data-middletext="<div id='liveDate'></div>"
           data-mainbtntext="Manual Reserve Facility [-🛕-]"
         ></div>
         <div
@@ -243,7 +268,7 @@
           id="section-header"
           data-title="Cart"
           data-subtitle="Sales Draft Management"
-          data-middletext="<div class='skew-x-12 text-white'></div>"
+          data-middletext="<div id='liveDate'></div>"
         ></div>
         <div id="section-stats"></div>
         <div
@@ -272,6 +297,7 @@
           id="section-header"
           data-title="Stock"
           data-subtitle="Product Catalog"
+          data-middletext="<div id='liveDate'></div>"
           data-mainbtntext="Register Product [-🧊-]"
           data-subbtntext="Logs [-📜-]"
         ></div>
@@ -296,12 +322,13 @@
         ></div>
       </section>
 
-      <!-- 🔥 payment 🔥 -->
-      <section id="payment-section" data-icons="fa-coins" data-color="green-cyan-yellow" class="section">
+      <!-- 🔥 payments 🔥 -->
+      <section id="payments-section" data-icons="fa-coins" data-color="green-cyan-yellow" class="section">
         <div
           id="section-header"
-          data-title="Payment"
+          data-title="Payments"
           data-subtitle="Transaction Processing"
+          data-middletext="<div id='liveDate'></div>"
           data-mainbtntext="Consolidate Transactions [-💳-]"
           data-subbtntext="Logs [-📜-]"
         ></div>
@@ -315,21 +342,15 @@
         ></div>
         <div
           id="section-content"
-          data-sectioncount="2"
-          data-tabtitles="Recent Complete Transaction Log::All Complete Transactions Log"
-          data-subtitles="Today's total complete transaction::Total complete transaction"
+          data-sectioncount="1"
+          data-tabtitles="Pending Transactions Log::Complete Transactions Log"
+          data-subtitles="Total pending transactions::Total complete transactions"
           data-sectiononesearchtext="Search keyword..."
-          data-sectiononesettings="1"
-          data-listemptytexts="No complete transactions today::No complete transactions yet"
-          data-listtitletexts="[Transaction ID//User ID//Date & Time]::[Transaction ID//User ID//Date & Time]"
-          data-listitembtnids="[invoicingDetailsBtn//invoicingVoidBtn]::[invoicingDetailsBtn//invoicingVoidBtn]"
-          data-listitembtntexts="[Details [-📒-]//Void [-📕-]]::[Details [-📒-]//Void [-📕-]]"
+          data-listemptytexts="No pending transactions yet::No complete transactions yet"
+          data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Purpose//Amount to Pay//Amount Paid//Change Amount//Price Rate//Payment Method//Log Date & Time]"
+          data-listitembtnids="[transactionProcessBtn//transactionVoidBtn]::[transactionDetailsBtn//transactionRefundBtn]"
+          data-listitembtntexts="[Process [-📒-]//Void [-📕-]]::[Details [-📒-]//Refund [-📕-]]"
           data-listitembtncolors="[yellow//red]::[yellow//red]"
-          data-sectiontwotitletexts="Pending Payment Queue::Recent pending transactions"
-          data-sectiontwosettings="1"
-          data-sectiontwoemptylist="No pending payment yet"
-          data-sectiontwosearchtext="Enter transaction ID..."
-          data-sectiontwobtntext="Process Transaction"
         ></div>
       </section>
 
@@ -358,7 +379,7 @@
           data-listemptytexts="No permissions yet::No roles yet::No users yet::No logs yet"
           data-listtitletexts="[Permission ID//Permission//Permission Mode]::[Role ID//Role//Role Permissions]::[User ID//User//User Role]::[User ID//User//Module(s)//User Action//Action Date and Time]"
           data-listitembtnids="[permissionUpdateBtn//permissionDeleteBtn]::[roleUpdateBtn//roleDeleteBtn]::[userUpdateBtn//userDeleteBtn]::[actionDetailsBtn]"
-          data-listitembtntexts="[Update [-🖊️-]//Delete [-🗑️-]]::[Update [-🖊️-]//Delete [-🗑️-]]::[Update [-🖊️-]//Delete [-🗑️-]]::[View Action Details [-🔧-]]"
+          data-listitembtntexts="[Update [-🖊️-]//Delete [-🗑️-]]::[Update [-🖊️-]//Delete [-🗑️-]]::[Update [-🖊️-]//Delete [-🗑️-]]::[Details [-🔧-]]"
           data-listitembtncolors="[blue//red]::[blue//red]::[blue//red]::[gray]"
         ></div>
       </section>
