--- a/src/html/admin_modal.html
+++ b/src/html/admin_modal.html
@@ -87,7 +87,7 @@
 
         <div class="flex hidden flex-col gap-2">
           <label class="text-xs font-medium text-gray-600 2xl:text-sm"></label>
-          <div id="input-radio" class="grid h-36 gap-6">
+          <div id="input-radio" class="grid h-36 gap-4 2xl:gap-6">
             <div
               class="hidden cursor-pointer content-center space-y-2 rounded-md border-2 border-gray-300 bg-gray-100 text-center duration-300 hover:border-amber-500"
             >
