--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -176,14 +176,14 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="All Registered Customers::Active Monthly Pass Customers::Past Monthly Pass Customers"
-          data-subtitles="Manage all customers::Manage all monthly pass customers::View all past monthly pass customers"
+          data-tabtitles="All Registered Customers::Active Monthly Pass Customers::Past Monthly Pass Customers::All Archived Customers"
+          data-subtitles="Manage all customers::Manage all monthly pass customers::View all past monthly pass customers::View all archived customers"
           data-sectiononesearchtext="Search keyword..."
-          data-listemptytexts="No registered customers yet::No active monthly pass customers yet::No past monthly pass customers yet"
-          data-listtitletexts="[Customer ID//Customer//Check-in Pass Type//Price Rate//Date Registered]::[Customer ID//Customer//Start Date//End Date//Days Left//Amount Paid//Price Rate]::[Customer ID//Customer//Start Date//End Date//Amount Paid//Price Rate]"
-          data-listitembtnids="[customerProcessBtn//customerEditDetailsBtn]::[customerProcessBtn//customerEditDetailsBtn]::[customerDetailsBtn]"
-          data-listitembtntexts="[Process [-📒-]//Edit Details [-⚙️-]]::[Process [-📒-]//Edit Details [-⚙️-]]::[Details [-⚙️-]]"
-          data-listitembtncolors="[yellow//orange]::[yellow//orange]::[gray]"
+          data-listemptytexts="No registered customers yet::No active monthly pass customers yet::No past monthly pass customers yet::No archived customers yet"
+          data-listtitletexts="[Customer ID//Customer//Check-in Pass Type//Price Rate//Date Registered]::[Customer ID//Customer//Start Date//End Date//Days Left//Amount Paid//Price Rate]::[Customer ID//Customer//Start Date//End Date//Amount Paid//Price Rate]::[Customer ID//Customer//Log Date & Time]"
+          data-listitembtnids="[customerProcessBtn//customerEditDetailsBtn]::[customerProcessBtn//customerEditDetailsBtn]::[customerDetailsBtn]::[customerDetailsBtn]"
+          data-listitembtntexts="[Process [-📒-]//Edit Details [-⚙️-]]::[Process [-📒-]//Edit Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
+          data-listitembtncolors="[yellow//orange]::[yellow//orange]::[gray]::[gray]"
         ></div>
       </section>
 
@@ -206,14 +206,14 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Regular Check-Ins Logbook::Monthly Pass Check-Ins Logbook"
-          data-subtitles="All regular customer check-ins::All monthly pass customer check-ins"
+          data-tabtitles="Regular Check-Ins Logbook::Monthly Pass Check-Ins Logbook::Archived Check-Ins Logbook"
+          data-subtitles="All regular customer check-ins::All monthly pass customer check-ins::All archived check-ins"
           data-sectiononesearchtext="Search keyword..."
-          data-listemptytexts="No regular customer check-ins yet::No monthly pass customer check-ins yet"
-          data-listtitletexts="[Customer ID//Customer//Log Date & Time]::[Customer ID//Customer//Log Date & Time]"
-          data-listitembtnids="[customerProcessBtn]::[customerProcessBtn]"
-          data-listitembtntexts="[Process [-📒-]]::[Process [-📒-]]"
-          data-listitembtncolors="[yellow]::[yellow]"
+          data-listemptytexts="No regular customer check-ins yet::No monthly pass customer check-ins yet::No archived check-ins yet"
+          data-listtitletexts="[Customer ID//Customer//Log Date & Time]::[Customer ID//Customer//Log Date & Time]::[Customer ID//Customer//Log Date & Time]"
+          data-listitembtnids="[checkinArchiveBtn]::[checkinArchiveBtn]::[checkinDetailsBtn]"
+          data-listitembtntexts="[Archive [-🧾-]]::[Archive [-🧾-]]::[Details [-⚙️-]]"
+          data-listitembtncolors="[gray]::[gray]::[gray]"
         ></div>
       </section>
 
