fix: archive/void functions

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -348,8 +348,8 @@
           data-listemptytexts="No pending transactions yet::No void transactions yet::No complete transactions yet::No refund transactions yet"
           data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer//Purpose//Amount to Pay//Amount Paid//Change Amount//Price Rate//Payment Method//Log Date & Time]::[Transaction ID//Customer//Purpose//Refund Amount//Log Date & Time]"
           data-listitembtnids="[transactionProcessBtn//transactionVoidBtn]::[transactionDetailsBtn]::[transactionDetailsBtn//transactionRefundBtn]::[transactionDetailsBtn]"
-          data-listitembtntexts="[Process [-📒-]//Void [-📕-]]::[Details [-📒-]]::[Details [-📒-]//Refund [-🧾-]]::[Details [-📒-]]"
-          data-listitembtncolors="[yellow//red]::[yellow]::[yellow//gray]::[yellow]"
+          data-listitembtntexts="[Process [-📒-]//Void [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]//Refund [-🧾-]]::[Details [-⚙️-]]"
+          data-listitembtncolors="[yellow//red]::[gray]::[gray//gray]::[gray]"
         ></div>
       </section>
 
