--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -180,7 +180,7 @@
           data-subtitles="Manage all customers::Manage all monthly pass customers::View all past monthly pass customers::View all archived customers"
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="No registered customers yet::No active monthly pass customers yet::No past monthly pass customers yet::No archived customers yet"
-          data-listtitletexts="[Customer ID//Customer//Check-in Pass Type//Price Rate//Date Registered]::[Customer ID//Customer//Start Date//End Date//Days Left//Amount Paid//Price Rate]::[Customer ID//Customer//Start Date//End Date//Amount Paid//Price Rate]::[Customer ID//Customer//Log Date & Time]"
+          data-listtitletexts="[Customer ID//Customer//Customer Type//Price Rate//Date Registered]::[Customer ID//Customer//Start Date//End Date//Days Left//Amount Paid//Price Rate//Log Date & Time]::[Customer ID//Customer//Start Date//End Date//Amount Paid//Price Rate//Log Date & Time]::[Customer ID//Customer//Log Date & Time]"
           data-listitembtnids="[customerProcessBtn//customerEditDetailsBtn]::[customerProcessBtn//customerEditDetailsBtn]::[customerDetailsBtn]::[customerDetailsBtn]"
           data-listitembtntexts="[Process [-📒-]//Edit Details [-⚙️-]]::[Process [-📒-]//Edit Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
           data-listitembtncolors="[yellow//orange]::[yellow//orange]::[gray]::[gray]"
@@ -297,7 +297,7 @@
           data-title="Stock"
           data-subtitle="Product Catalog"
           data-middletext="<div id='liveDate'></div>"
-          data-mainbtntext="Register Product [-🧊-]"
+          data-mainbtntext="Add Product [-🧊-]"
           data-subbtntext="Logs [-📜-]"
         ></div>
         <div
@@ -342,13 +342,13 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Pending Transactions Log::Void Transactions Log::Complete Transactions Log::Refund Transactions Log"
+          data-tabtitles="Pending Transactions Log::Canceled Transactions Log::Complete Transactions Log::Refund Transactions Log"
           data-subtitles="Total pending transactions::Total void transactions::Total complete transactions::Total refund transactions"
           data-sectiononesearchtext="Search keyword..."
-          data-listemptytexts="No pending transactions yet::No void transactions yet::No complete transactions yet::No refund transactions yet"
+          data-listemptytexts="No pending transactions yet::No canceled transactions yet::No complete transactions yet::No refund transactions yet"
           data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer//Purpose//Amount to Pay//Amount Paid//Change Amount//Price Rate//Payment Method//Log Date & Time]::[Transaction ID//Customer//Purpose//Refund Amount//Log Date & Time]"
-          data-listitembtnids="[transactionProcessBtn//transactionVoidBtn]::[transactionDetailsBtn]::[transactionDetailsBtn//transactionRefundBtn]::[transactionDetailsBtn]"
-          data-listitembtntexts="[Process [-📒-]//Void [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]//Refund [-🧾-]]::[Details [-⚙️-]]"
+          data-listitembtnids="[transactionProcessBtn//transactionCancelBtn]::[transactionDetailsBtn]::[transactionDetailsBtn//transactionRefundBtn]::[transactionDetailsBtn]"
+          data-listitembtntexts="[Process [-📒-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]//Refund [-🧾-]]::[Details [-⚙️-]]"
           data-listitembtncolors="[yellow//red]::[gray]::[gray//gray]::[gray]"
         ></div>
       </section>
