--- a/src/html/admin_content.html
+++ b/src/html/admin_content.html
@@ -15,8 +15,8 @@
             </div>
             <div class="absolute right-2 top-2 hidden">
               <div class="relative h-2 w-2">
-                <div class="absolute h-full w-full scale-105 animate-ping rounded-full bg-red-500 opacity-75"></div>
-                <div class="absolute h-2 w-2 rounded-full bg-red-500"></div>
+                <div class="absolute h-full w-full scale-105 animate-ping rounded-full bg-green-500 opacity-75"></div>
+                <div class="absolute h-2 w-2 rounded-full bg-green-500"></div>
               </div>
             </div>
           </button>
