fix: add to cart

--- a/src/html/custom/ecommerce_cart_content.html
+++ b/src/html/custom/ecommerce_cart_content.html
@@ -53,7 +53,7 @@
           >
             –
           </button>
-          <span class="quantity-display min-w-6 px-1 text-center text-sm font-bold text-gray-800">0</span>
+          <span class="quantity-display min-w-6 px-1 text-center text-sm font-bold text-gray-800">1</span>
           <button
             class="increase-btn flex h-8 w-8 items-center justify-center rounded-md bg-gradient-to-r from-yellow-400 to-amber-500 text-sm font-bold text-white transition-colors duration-200 hover:from-yellow-500 hover:to-amber-600"
           >
@@ -63,7 +63,7 @@
       </div>
 
       <button
-        class="add-to-cart-btn relative w-full cursor-not-allowed overflow-hidden rounded-xl bg-gradient-to-r from-yellow-400 via-amber-400 to-yellow-500 py-3 text-base font-bold text-white opacity-50 transition-all duration-500 hover:from-yellow-500 hover:via-amber-500 hover:to-yellow-600 hover:shadow-lg hover:shadow-yellow-200/50"
+        class="add-to-cart-btn relative w-full overflow-hidden rounded-xl bg-gradient-to-r from-yellow-400 via-amber-400 to-yellow-500 py-3 text-base font-bold text-white transition-all duration-500 hover:from-yellow-500 hover:via-amber-500 hover:to-yellow-600 hover:shadow-lg hover:shadow-yellow-200/50"
       >
         <span class="relative z-10">Add to Cart 🛒</span>
         <div
